# nhl-highlights

./: .gitignore  Dockerfile  LICENSE  Makefile  go.mod  go.sum  main.go  sqlboiler.toml
.github/workflows/: publish.yml  test.yml
addrof/: addrof.go
cmd/: archive.go  clips.go  main.go  serve.go
cmd/database/: main.go
cmd/nhl-highlights/: main.go
etc/: nhl-highlights.service
generate/: generate.go  highlights.go  template.html  templates.go  templates_test.go
generate/templates/: clips.html  highlights.html
go/: go.sum
go/models/: boil_table_names.go  games.go
go/nhlapi/: client.go  constants.go  teams.go
go/repository/: repository.go
models/: boil_suites_test.go  boil_table_names.go  cached_pages.go  games.go  games_test.go  highlights.go
nhlapi/: client.go  content.go  schedule.go  teams.go  teams.json
nhlapi2/: client.go  landing.go  schedule.go  video_metadata.go
render/: render.go
repository/: game.go  repository.go  repository_test.go
rust/nhl-highlights/: Cargo.toml
rust/nhl-highlights/src/: main.rs
rust/nhl-highlights/src/nhlapi/: client.rs  content.rs  mod.rs  schedule.rs  teams.rs
rust/nhl-highlights/src/repo/: mod.rs  schema.sql
tools/: boiler  build  docker  install-boiler  run
