[package]
name = "nhl-highlights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"

[dependencies.attohttpc]
version = "0.24.0"
default-features = false
features = ["compress", "json", "tls-rustls-native-roots"]

[dependencies.serde]
version = "1.0.147"
features = ["derive"]
